--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<pre>
-  {{title}}
-</pre>
-<button (click)="whoami()">Who am i</button>
+<mat-toolbar color="accent">
+  Pothole Tracking
+  <span class="flex-fill"></span>
+  <button (click)="auth.logout()" *ngIf="auth.isLoggedIn" mat-button>Sign out</button>
+  <button routerLink="/login" *ngIf="!auth.isLoggedIn" mat-button>Sign In</button>
+  <button routerLink="/register" *ngIf="!auth.isLoggedIn" mat-button>Register</button>
+</mat-toolbar>
+<router-outlet></router-outlet>
