--- a/src/app/modules/user/dashboard/dashboard.component.scss
+++ b/src/app/modules/user/dashboard/dashboard.component.scss
@@ -1,6 +1,20 @@
-.side-nav {
+.side-nav-container {
   height: calc(100vh - 64px);
 }
-.content{
+.side-nav-content{
 
+}
+.sidenav{
+  padding: 20px;
+}
+
+.profile{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.active{
+  background-color: white;
+  color: #4051b5;
+  border: 2px solid #4051b5;
 }
