Uploading records, my complaints implemented

--- a/src/app/modules/user/dashboard/dashboard.component.html
+++ b/src/app/modules/user/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       <button routerLinkActive="active" routerLink="my" color="primary" class="mt-2 w-100" mat-flat-button>My Complaints</button>
     </div>
   </mat-drawer>
-  <div class="side-nav-content">
+  <div class="side-nav-content w-100">
     <mat-toolbar>
       <button (click)="drawer.toggle()" mat-icon-button>
         <mat-icon *ngIf="!drawer.opened">menu</mat-icon>
