--- a/src/app/modules/user/dashboard/dashboard.component.scss
+++ b/src/app/modules/user/dashboard/dashboard.component.scss
@@ -1,8 +1,8 @@
 .side-nav-container {
-  height: calc(100vh - 64px);
+  height: 100vh;
 }
 .side-nav-content{
-
+max-width: 100%;
 }
 .sidenav{
   padding: 20px;
