--- a/src/app/modules/user/home/home.component.html
+++ b/src/app/modules/user/home/home.component.html
@@ -8,7 +8,7 @@
   <mat-card class="pointer" routerLink="my">
     <mat-card-content>
       <img width="256" src="assets/function.png" alt="">
-      <h2>Upload a Pothole</h2>
+      <h2>My Complaints</h2>
     </mat-card-content>
   </mat-card>
 </div>
