--- a/src/app/modules/user/upload/upload.component.html
+++ b/src/app/modules/user/upload/upload.component.html
@@ -1,1 +1,38 @@
-<p>upload works!</p>
+<div class="d-flex justify-content-center w-100">
+  <div [formGroup]="form" class="d-flex flex-column align-items-center mat-elevation-z2 p-4">
+    <h1>Upload a Pothole Report</h1>
+    <label class="file-upload" for="file">
+      <input (change)="change($event)" id="file" type="file" formControlName="file">
+    </label>
+    <h3>{{form.value.file}}</h3>
+    <div class="d-flex flex-row justify-content-around">
+      <button class="m-1 " (click)="getLocation()" mat-raised-button>Get Location</button>
+      <button class="m-1 " (click)="pasteLocation()" mat-raised-button>Paste</button>
+    </div>
+    <div class="d-flex justify-content-around">
+      <mat-form-field class="m-1" appearance="outline">
+        <mat-label>Latitude</mat-label>
+        <input formControlName="lat" matInput type="text">
+        <mat-error>This Field is Required</mat-error>
+      </mat-form-field>
+      <mat-form-field class="m-1" appearance="outline">
+        <mat-label>Longitude</mat-label>
+        <input formControlName="lng" matInput type="text">
+        <mat-error>This Field is Required</mat-error>
+      </mat-form-field>
+    </div>
+    <mat-form-field class="mt-2" appearance="outline">
+      <mat-label>Zipcode</mat-label>
+      <input formControlName="zipcode" matInput type="text">
+      <!--      <mat-error>This Field is Required</mat-error>-->
+      <mat-error *ngIf="form.get('zipcode')?.hasError('required')">This Field is Required</mat-error>
+      <mat-error *ngIf="form.get('zipcode')?.hasError('pattern')">Invalid Zipcode</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Description</mat-label>
+      <input formControlName="description" matInput type="text">
+      <mat-error>This Field is Required</mat-error>
+    </mat-form-field>
+    <button class="w-100" [disabled]="form.invalid" (click)="submit()" mat-raised-button color="primary">Submit</button>
+  </div>
+</div>
