--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .pointer{
   cursor: pointer;
 }
+
+.container{
+  margin-left: 5vw;
+  margin-right: 5vw;
+}
