--- a/src/app/modules/user/dashboard/dashboard.component.html
+++ b/src/app/modules/user/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="side-nav-container" autosize>
   <mat-drawer [opened]="isSmall()" #drawer class="sidenav" mode="side">
-    <mat-chip-list>
+    <mat-chip-list class="w-100">
       <mat-chip routerLink="/">User</mat-chip>
       <mat-chip *ngIf="hasAuthority('CONTRACTOR')" routerLink="/contractor" selected color="primary">Contractor
       </mat-chip>
