contractor my bids updated

--- a/src/app/modules/admin/adashboard/adashboard.component.html
+++ b/src/app/modules/admin/adashboard/adashboard.component.html
@@ -15,6 +15,9 @@
       <button routerLinkActive="active" routerLink="contractors" color="primary" class="mt-2 w-100" mat-flat-button>
         New Contractors
       </button>
+      <button routerLinkActive="active" routerLink="bids" color="primary" class="mt-2 w-100" mat-flat-button>
+        Bid Applications
+      </button>
     </div>
   </mat-drawer>
   <div class="side-nav-content w-100">
