--- a/src/app/modules/user/dashboard/dashboard.component.html
+++ b/src/app/modules/user/dashboard/dashboard.component.html
@@ -18,6 +18,8 @@
       <button routerLinkActive="active" routerLink="my" color="primary" class="mt-2 w-100" mat-flat-button>My
         Complaints
       </button>
+      <button routerLinkActive="active" routerLink="apply" color="primary" class="mt-2 w-100" mat-flat-button>Become a Contractor
+      </button>
     </div>
   </mat-drawer>
   <div class="side-nav-content w-100">
