--- a/src/app/modules/admin/home/home.component.html
+++ b/src/app/modules/admin/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="d-flex flex-column justify-content-around mt-5 mt-sm-1 flex-sm-row align-items-center ">
+  <mat-card class="pointer" routerLink="contractors">
+    <mat-card-content>
+      <img width="256" src="assets/contractors.png" alt="">
+      <h2>New Contractors</h2>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="pointer" routerLink="bids">
+    <mat-card-content>
+      <img width="275" src="assets/bids.png" alt="">
+      <h2>Bid Applications</h2>
+    </mat-card-content>
+  </mat-card>
+</div>
