--- a/src/app/modules/admin/contractor-applications/contractor-applications.component.html
+++ b/src/app/modules/admin/contractor-applications/contractor-applications.component.html
@@ -11,6 +11,6 @@
 
 <ng-template #noNew>
   <div class="mt-3 d-flex justify-content-center">
-    <h1>No New Contractor Applications</h1>
+    <img width="30" height="30" src="assets/not_found.png" alt="Profile"><h1>No New Contractor Applications</h1>
   </div>
 </ng-template>
