--- a/src/app/modules/contractor/mybids/mybids.component.html
+++ b/src/app/modules/contractor/mybids/mybids.component.html
@@ -10,6 +10,6 @@
 </div>
 <ng-template #noNew>
   <div class="mt-3 d-flex justify-content-center">
-    <h1>No records found</h1>
+    <img width="30" height="30" src="assets/not_found.png" alt="Profile"><h1>No records found</h1>
   </div>
 </ng-template>
