--- a/src/app/modules/contractor/cdashboard/cdashboard.component.html
+++ b/src/app/modules/contractor/cdashboard/cdashboard.component.html
@@ -18,6 +18,9 @@
       <button routerLinkActive="active" routerLink="bids" color="primary" class="mt-2 w-100" mat-flat-button>
         My Bids
       </button>
+      <button routerLinkActive="active" routerLink="my" color="primary" class="mt-2 w-100" mat-flat-button>
+        My Contracts
+      </button>
     </div>
   </mat-drawer>
   <div class="side-nav-content w-100">
