--- a/src/app/modules/contractor/my-contracts/my-contracts.component.html
+++ b/src/app/modules/contractor/my-contracts/my-contracts.component.html
@@ -1,3 +1,23 @@
-<pre *ngIf="$contracts | async as contracts">
-  {{contracts | json}}
-</pre>
+<div class="container">
+  <div class="d-flex flex-column mt-2">
+    <div class="item" *ngFor="let contract of $contracts|async">
+      <div>
+        <span>
+          <mat-icon>gavel</mat-icon>
+          {{contract.zipcode}}
+        </span> <br>
+        {{contract.records.length}} records in this area
+      </div>
+      <div>
+        <mat-form-field>
+          <mat-select #selectInput [value]="contract.status"
+                      (selectionChange)="statusUpdate(contract,selectInput.value)">
+            <mat-option value="ASSIGNED">Work Not Yet Started</mat-option>
+            <mat-option value="UNDER_PROGRESS">Work Started</mat-option>
+            <mat-option value="FINISHED">Finished</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+  </div>
+</div>
