--- a/src/app/modules/user/upload/upload.component.html
+++ b/src/app/modules/user/upload/upload.component.html
@@ -1,13 +1,33 @@
 <div class="d-flex justify-content-center w-100">
   <div [formGroup]="form" class="d-flex flex-column align-items-center mat-elevation-z2 p-4">
     <h1>Upload a Pothole Report</h1>
-    <label class="file-upload" for="file">
-      <input (change)="change($event)" id="file" type="file" formControlName="file">
-    </label>
-    <h3>{{form.value.file}}</h3>
-    <div class="d-flex flex-row justify-content-around">
-      <button class="m-1 " (click)="getLocation()" mat-raised-button>Get Location</button>
-      <button class="m-1 " (click)="pasteLocation()" mat-raised-button>Paste</button>
+    <div class="d-flex mb-3">
+      <button color="primary" class="flex-row m-2 w-50" mat-raised-button (click)="toggle(true)">Click a picture</button>
+      <button color="primary" class="flex-row m-2 w-50" mat-raised-button (click)="toggle(false)">Upload a picture</button>
+    </div>
+    <div *ngIf="clickOrUpload" >
+      <div class="video-container" *ngIf="!error">
+        <video [class.show]="!isCaptured"[class.hide]="isCaptured" #video id="video" [width]="WIDTH" [height]="HEIGHT"
+          autoplay></video>
+        <canvas [class.show]="isCaptured" [class.hide]="!isCaptured" #canvas id="canvas" [width]="WIDTH"
+          [height]="HEIGHT"></canvas>
+      </div>
+
+      <div class="snap-container">
+          <button mat-raised-button color="warn" *ngIf="!isCaptured" (click)="capture()">Snap Photo</button>
+          <div *ngIf="isCaptured">
+              <button mat-raised-button color="warn" *ngIf="isCaptured" (click)="removeCurrent()">Retake</button>
+          </div>
+      </div>
+      <div *ngIf="error" class="text-danger mt-4">
+        {{ error }}. Please click refresh
+        </div>
+    </div>
+    <div *ngIf="!clickOrUpload" >
+      <label class="file-upload" for="file">
+        <input (change)="change($event)" id="file" type="file" formControlName="file">
+      </label>
+      <h3>{{form.value.file}}</h3>
     </div>
     <div class="d-flex justify-content-around">
       <mat-form-field class="m-1" appearance="outline">
@@ -20,6 +40,10 @@
         <input formControlName="lng" matInput type="text">
         <mat-error>This Field is Required</mat-error>
       </mat-form-field>
+    </div>
+    <div class="d-flex flex-row justify-content-around">
+      <button class="m-1 " (click)="getLocation()" mat-raised-button>Get Location</button>
+      <button class="m-1 " (click)="pasteLocation()" mat-raised-button>Paste</button>
     </div>
     <mat-form-field class="mt-2" appearance="outline">
       <mat-label>Zipcode</mat-label>
