--- a/src/app/modules/user/upload/upload.component.scss
+++ b/src/app/modules/user/upload/upload.component.scss
@@ -1,3 +1,27 @@
+.snap-container {
+  margin-top: 16px;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.list-unstyled {
+  list-style: none;
+}
+
+.list-unstyled li {
+  display: inline-block;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
 .file-upload {
   width: 100%;
   cursor: pointer;
