ALl Users Table added in Admin Dashboard

--- a/src/app/modules/admin/adashboard/adashboard.component.html
+++ b/src/app/modules/admin/adashboard/adashboard.component.html
@@ -18,6 +18,9 @@
       <button routerLinkActive="active" routerLink="bids" color="primary" class="mt-2 w-100" mat-flat-button>
         Bid Applications
       </button>
+      <button routerLinkActive="active" routerLink="users" color="primary" class="mt-2 w-100" mat-flat-button>
+        All Users
+      </button>
     </div>
   </mat-drawer>
   <div class="side-nav-content w-100">
