--- a/src/app/modules/admin/contractor-applications/contractor-applications.component.html
+++ b/src/app/modules/admin/contractor-applications/contractor-applications.component.html
@@ -1,16 +1,18 @@
-<div *ngIf="contractors.length>0 else noNew" class="m-4 d-flex align-items-center flex-column">
-  <mat-selection-list #list class="w-100">
-    <mat-list-option [value]="con.username" *ngFor="let con of contractors">
-      <div matLine> {{con.username}}: {{con.email}}</div>
-      <div [cdkCopyToClipboard]="con.licence" (cdkCopyToClipboardCopied)="copyLicence()" matLine>
-        Licence ID: {{con.licence}}</div>
-    </mat-list-option>
-  </mat-selection-list>
-  <button class="mt-4 w-100" mat-raised-button color="primary" (click)="approveSelected()">Approve Selected</button>
+<div *ngIf="(contractors | async) as cons">
+  <div *ngIf="cons.length>0 else noNew" class="m-4 d-flex align-items-center flex-column">
+    <mat-selection-list #list class="w-100">
+      <mat-list-option [value]="con.username" *ngFor="let con of cons">
+        <div matLine> {{con.username}}: {{con.email}}</div>
+        <div [cdkCopyToClipboard]="con.licence" (cdkCopyToClipboardCopied)="copyLicence()" matLine>
+          Licence ID: {{con.licence}}</div>
+      </mat-list-option>
+    </mat-selection-list>
+    <button class="mt-4 w-100" mat-raised-button color="primary" (click)="approveSelected()">Approve Selected</button>
+  </div>
 </div>
-
 <ng-template #noNew>
   <div class="mt-3 d-flex justify-content-center">
-    <img width="30" height="30" src="assets/not_found.png" alt="Profile"><h1>No New Contractor Applications</h1>
+    <img width="30" height="30" src="assets/not_found.png" alt="Profile">
+    <h1>No New Contractor Applications</h1>
   </div>
 </ng-template>
