Added Approved Contracts Component and minor bugs fixed

--- a/src/app/modules/admin/adashboard/adashboard.component.html
+++ b/src/app/modules/admin/adashboard/adashboard.component.html
@@ -21,6 +21,9 @@
       <button routerLinkActive="active" routerLink="users" color="primary" class="mt-2 w-100" mat-flat-button>
         All Users
       </button>
+      <button routerLinkActive="active" routerLink="approved" color="primary" class="mt-2 w-100" mat-flat-button>
+        Approved Contracts
+      </button>
     </div>
   </mat-drawer>
   <div class="side-nav-content w-100">
