--- a/src/app/modules/contractor/contracts/contracts.component.html
+++ b/src/app/modules/contractor/contracts/contracts.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column flex-sm-row ">
   <div class="p-3 clusters">
     <mat-list>
-      <mat-list-item [routerLink]="cluster.zipcode" mat-ripple class="pointer" *ngFor="let cluster of clusters">
+      <mat-list-item [routerLink]="cluster.zipcode" mat-ripple class="pointer" *ngFor="let cluster of getSorted(clusters)">
         <mat-icon [matBadge]="cluster.records.length" mat-list-icon>apps</mat-icon>
         <div matLine>{{cluster.zipcode}}</div>
         <div matLine>{{cluster.records.length}} records in this area</div>
